@@ -38,8 +38,9 @@
  *
  * This interface implements the "Nautilus Menu Item" tab of the notebook.
  *
- * Entry fields are enabled, as soon as an edited item has been set a a
- * property of the main window,
+ * Entry fields are enabled, as soon as an edited item has been set as a
+ * property of the main window, Fields are those of NAObjectItem (i.e.
+ * not NAObjectProfile, not NAIContext, but may be NAObjectAction specific).
  */
 
 #include <glib-object.h>
